<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    tools:context=".Instructions">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:text="@string/instructions_before_you_proceed"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="6dp"
        android:text="@string/instruction"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnQuizUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="45dp"
        android:background="#ABC8FA"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/let_s_quiz_up"
        android:textColor="@android:color/secondary_text_light"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>